
name:                 sized-index
version:              0.1.0.0
synopsis:             Size-Generic Index Structures
license:              AGPL-3
license-file:         LICENSE
author:               John P Mayer Jr
maintainer:           john.p.mayer.jr@gmail.com
copyright:            John p Mayer Jr 2014
category:             Data
build-type:           Simple
cabal-version:        >=1.10

library
  exposed-modules:      Data.BTree
  build-depends:        base >=4.6 && <4.7,
                        equational-reasoning,
                        singletons,
                        sized-vector,
                        type-natural ==0.2.1.*
  hs-source-dirs:       src
  default-language:     Haskell2010
