
name:                 stm-index
version:              0.1.0.0
synopsis:             STM Concurrent Index Structures
license:              AGPL-3
license-file:         LICENSE
author:               John P Mayer Jr
maintainer:           john.p.mayer.jr@gmail.com
copyright:            John p Mayer Jr 2014
category:             Data
build-type:           Simple
cabal-version:        >=1.10

library
  exposed-modules:      Data.Concurrent.BTree
  -- other-modules:       
  -- other-extensions:    
  build-depends:        base >=4.6 && <4.7,
                        lens ==4.1.*,
                        equational-reasoning,
                        semigroups,
                        singletons ==0.8.6,
                        sized-vector ==1.3.1.*,
                        stm ==2.4.2,
                        type-natural ==0.2.*
  hs-source-dirs:       src
  default-language:     Haskell2010
